# nextflow-strict-syntax-health

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  LICENSE  README.md  history.json  pyproject.toml
.github/workflows/: lint-pipelines.yml  pre-commit.yml
lint_results/: abotyper_lint.md  airrflow_lint.txt  alleleexpression_lint.md  ampliseq_lint.md  ampliseq_lint.txt  atacseq_lint.md  atacseq_lint.txt  bacass_lint.md  bactmap_lint.md  bamtofastq_lint.md  bamtofastq_lint.txt  cageseq_lint.md  cageseq_lint.txt  callingcards_lint.md  callingcards_lint.txt  cellpainting_lint.md  chipseq_lint.md  chipseq_lint.txt  circdna_lint.md  circrna_lint.md  clipseq_lint.md  coproid_lint.md  createpanelrefs_lint.md  createtaxdb_lint.md  createtaxdb_lint.txt  crisprseq_lint.md  crisprseq_lint.txt  cutandrun_lint.md  cutandrun_lint.txt  datasync_lint.md  deepmodeloptim_lint.md  deepmutscan_lint.md  demo_lint.md  demultiplex_lint.md  demultiplex_lint.txt  denovotranscript_lint.md  denovotranscript_lint.txt  detaxizer_lint.md  diaproteomics_lint.md  diaproteomics_lint.txt  (+150 more)
lint_results/module-results/: abricate_run_lint.md  abricate_summary_lint.md  abritamr_run_lint.md  affy_justrma_lint.md  agat_convertbed2gff_lint.md  agat_convertgff2bed_lint.md  agat_convertspgff2gtf_lint.md  agat_convertspgff2tsv_lint.md  agat_convertspgxf2gxf_lint.md  agat_spaddintrons_lint.md  agat_spextractsequences_lint.md  agat_spfilterbyorfsize_lint.md  agat_spfilterfeaturefromkilllist_lint.md  agat_spflagshortintrons_lint.md  agat_spkeeplongestisoform_lint.md  agat_spmergeannotations_lint.md  (+1375 more)
(+416 files in other folders)
