[project]
name = "strict-syntax-health"
version = "0.1.0"
description = "Monitor sanger-tol pipelines for Nextflow strict syntax linting errors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "rich-click>=1.7",
    "rich>=13.0",
    "httpx>=0.27",
    "plotly>=5.0",
    "kaleido>=0.2",
]

[project.optional-dependencies]
dev = ["prek", "ruff"]

[project.scripts]
strict-syntax-health = "strict_syntax_health.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
